bug fixed and add index current

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <div class="container">
       <div class="slider">
-        <div class="animate">
-          <img class="mySlides" src="./img/landing1.jpg">
+        <div class="animate" style="left: 0">
+          <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
           <img class="mySlides" src="./img/landing3.jpg">
           <img class="mySlides" src="./img/landing4.jpg">
@@ -20,8 +20,8 @@
       </div>
 
       <div class="slider">
-        <div class="animate">
-          <img class="mySlides" src="./img/landing1.jpg">
+        <div class="animate" style="left: 0">
+          <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
           <img class="mySlides" src="./img/landing3.jpg">
           <img class="mySlides" src="./img/landing4.jpg">
@@ -30,8 +30,8 @@
       </div>
 
       <div class="slider">
-        <div class="animate">
-          <img class="mySlides" src="./img/landing1.jpg">
+        <div class="animate" style="left: 0">
+          <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
           <img class="mySlides" src="./img/landing3.jpg">
           <img class="mySlides" src="./img/landing4.jpg">
@@ -40,8 +40,8 @@
       </div>
 
       <div class="slider">
-        <div class="animate">
-          <img class="mySlides" src="./img/landing1.jpg">
+        <div class="animate" style="left: 0">
+          <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
           <img class="mySlides" src="./img/landing3.jpg">
           <img class="mySlides" src="./img/landing4.jpg">
