--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <script type="text/javascript" src="./dist/bundle.js"></script>
   </head>
   <body>
-
     <div class="container">
       <div class="slider">
+        <span class="left-arrow"> &#10094; </span>
+        <span class="right-arrow"> &#10095; </span>
         <div class="animate" style="left: 0">
           <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
@@ -20,6 +21,8 @@
       </div>
 
       <div class="slider">
+        <span class="left-arrow"> &#10094; </span>
+        <span class="right-arrow"> &#10095; </span>
         <div class="animate" style="left: 0">
           <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
@@ -30,6 +33,8 @@
       </div>
 
       <div class="slider">
+        <span class="left-arrow"> &#10094; </span>
+        <span class="right-arrow"> &#10095; </span>
         <div class="animate" style="left: 0">
           <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
@@ -40,6 +45,8 @@
       </div>
 
       <div class="slider">
+        <span class="left-arrow"> &#10094; </span>
+        <span class="right-arrow"> &#10095; </span>
         <div class="animate" style="left: 0">
           <img class="mySlides focused" src="./img/landing1.jpg">
           <img class="mySlides" src="./img/landing2.jpg">
